@@ -5,49 +5,6 @@
  */
 #include "tl880.h"
 
-struct _SURFACE_DESC {
-	unsigned long field_0;
-	unsigned long field_4;
-	unsigned long field_8;
-	unsigned long field_c;
-	unsigned short field_10;
-	unsigned short field_12;
-	unsigned short field_14;
-	unsigned short field_16;
-	unsigned short field_18;
-};
-
-struct SOverlaySurface {
-	unsigned long field_0;
-	unsigned long field_4;
-	unsigned long field_8;
-	unsigned long field_c;
-	unsigned long field_10;
-	unsigned long field_14; // _SURFACE_DESC->field_4
-	unsigned long field_18; // _SURFACE_DESC->field_8
-	unsigned long field_1c;
-	unsigned long field_20;
-	unsigned long field_24;
-	unsigned long field_28;
-	unsigned long field_2c;
-	unsigned long field_30; // _SURFACE_DESC->field_10
-	unsigned long field_34; // _SURFACE_DESC->field_12
-	unsigned long field_38;
-	unsigned long field_3c;
-	unsigned long field_40;
-	unsigned long field_44;
-	unsigned long field_48;
-	unsigned long field_4c;
-	unsigned long field_50;
-	unsigned long field_54;
-	unsigned long field_58;
-	unsigned long field_5c;
-	unsigned long field_60;
-	unsigned long field_64;
-	unsigned long surface_id;
-	struct SOverlaySurface *next;
-};
-
 unsigned long _g_idTracker = 0;
 
 void tl880_add_cursor(struct tl880_dev *tl880dev, struct SOverlaySurface *surface);
@@ -144,145 +101,74 @@ void tl880_show_cursor(struct tl880_dev *tl880dev, struct SOverlaySurface *surfa
 
 struct SOverlaySurface *g_cursor_list = NULL;
 
-void tl880_add_cursor(struct tl880_dev *tl880dev, struct SOverlaySurface *surface)
+void tl880_add_cursor(struct tl880_dev *tl880dev, struct SOverlaySurface *cursor)
 {
 	if(!surface) {
 		printk(KERN_ERR "tl880: NULL surface in tl880_add_cursor\n");
 		return;
 	}
 
-	surface->next = g_cursor_list;
-	g_cursor_list = surface;
+	cursor->next = g_cursor_list;
+	g_cursor_list = cursor;
 }
 
-struct OSDmemory {
-	unsigned long field_0;
-	unsigned long virt_addr;
-	unsigned long phys_addr;
-	unsigned long size;
-	unsigned long active;
-	unsigned long id;
-	struct OSDmemory *next;
-};
-
-unsigned long _g_idTracker_0 = 0;
-
-struct OSDmemory *_g_head = NULL;
-
-/* This function merges any consecutive free areas to a single area */
-int tl880_compact_osdmem(struct tl880_dev *tl880dev)
+void tl880_delete_cursor(struct tl880_dev *tl880dev, struct SOverlaySurface *cursor)
 {
-	struct OSDmemory *listp1 = _g_head, *listp2;
+	eax = g_cursor_list;
+	esi = cursor;
 
-	listp1 = _g_head;
-
-	/* Walk through the linked list */
-	while(listp1 && listp1->next) {
-		listp2 = listp1->next;
-		if(!listp1->active && !listp2->active) {
-			/* Two consecutive areas are inactive, merge them */
-			listp1->size += listp2->size;
-			listp1->next = listp2->next;
-			kfree(listp2);
-		} else {
-			/* One or both areas are active, move on */
-			listp1 = listp2;
-		}
+	if(!tl880dev || !cursor) {
+		printk(KERN_ERR "tl880: NULL parameter in tl880_delete_cursor\n");
+		return;
 	}
 
-	return 1;
-}
-
-unsigned long tl880_allocate_osd_memory(struct tl880_dev *tl880dev, unsigned long size, unsigned long align)
-{
-	struct OSDmemory *listp1, *newmem;
-	unsigned long retval;
-	unsigned long alignsize = align - 1;
-	unsigned long mask = ~alignsize;
-	unsigned long finalsize = size + alignsize;
-	unsigned long active_size = 0, inactive_size = 0;
-	
-	listp1 = _g_head;
-
-	if(!_g_head) {
-		//initializeOSDMemory(sBoardInfo.osd_address, sBoardInfo.virt_addr);
+	if(esi == eax) {
+		eax = esi->field_6c;
+		g_cursor_list = eax;
+		goto loc_3b31f;
 	}
 
-	tl880_compact_osdmem(tl880dev);
+	goto loc_3b304;
 
-	/* Search for an inactive block of the correct size */
-	listp1 = _g_head;
-	while(listp1 != NULL) {
-		if(!listp1->active && listp1->size == finalsize) {
-			/* An inactive block was found; set it active */
-			listp1->active = 1;
-			retval = (alignsize + listp1->virt_addr) & mask;
-			listp1->field_0 = retval - listp1->virt_addr;
-			
-			return retval;
-		}
-		listp1 = listp1->next;
+loc_3b304:
+	if(!eax) {
+		goto loc_3b33a;
 	}
 
-	/* Search for an inactive block greater than the correct size */
-	listp1 = _g_head;
-	while(listp1) {
-		if(!listp1->active && listp1->size > finalsize) {
-			if(!(newmem = kmalloc(0x1c, 1))) {
-				return 0;
-			}
-			
-			newmem->field_0 = 0;
-			newmem->virt_addr = 0;
-			newmem->phys_addr = 0;
-			newmem->size = 0;
-			newmem->active = 0;
-			newmem->id = ++_g_idTracker_0;
-			newmem->next = listp1->next;
-			listp1->next = newmem;
-			newmem->virt_addr = listp1->virt_addr + finalsize;
-			newmem->phys_addr = listp1->phys_addr + finalsize;
-			newmem->size = listp1->size - finalsize;
-			listp1->size = finalsize;
-			listp1->active = 1;
-		}
+loc_3b308:
+	ecx = eax->field_6c;
+	if(ecx == esi) {
+		goto loc_3b315;
 	}
 
-	/* Out of space; count active and inactive memory and return */
-	listp1 = _g_head;
-	while(listp1) {
-		if(listp1->active) {
-			active_size += listp1->size;
-		} else {
-			inactive_size += listp1->size;
-		}
-		listp1 = listp1->next;
-	}
-	printk(KERN_WARNING "tl880: out of OSD memory; active bytes: 0x%lx, inactive bytes: 0x%lx\n", active_size, inactive_size);
-	return 0;
-}
-
-unsigned long tl880_get_osdmem_offset(struct tl880_dev *tl880dev, unsigned long addr)
-{
-	struct OSDmemory *listp = _g_head;
-
-	/* Walk linked list */
-	while(listp) {
-		/* Check for invalid memory block ID (sign of memory corruption or bug) */
-		if((listp->id & 0xfff00000) != 0x52300000) {
-			printk(KERN_ERR "tl880: invalid ID in tl880_get_osdmem_offset: 0x%08lx (should be 0x523xxxxx)\n", listp->id);
-			break;
-		}
-
-		/* If this block matches, return its address */
-		if(listp->active && listp->virt_addr + listp->field_0 == addr) {
-			return listp->phys_addr + listp->field_0;
-		}
-
-		listp = listp->next;
+	eax = ecx;
+	if(eax) {
+		goto loc_3b308;
 	}
 
-	return -1;
+loc_3b315:
+	if(!eax) {
+		goto loc_3b33a;
+	}
+
+	ecx = esi->field_6c;
+	eax->field_6c = ecx;
+
+loc_3b31f:
+	eax = esi->field_8;
+	esi->field_6c = 0;
+	if(!eax) {
+		goto loc_3b330;
+	}
+
+	/* deallocateOSDMemory(eax); */
+
+loc_3b330:
+	esi->field_8 = 0;
+	kfree(esi);
+
+loc_3b33a:
+	return;
 }
 
 
