@@ -2,6 +2,8 @@
 
 	* Added tl880_get_osdmem_offset() to tl880cursor.c.
 	* Fixed misinformation in myhd_154.txt about getSDRAMoffset.
+	* Add tl880osd.c and move some functions from tl880cursor into it.
+	* Added tl880_delete_cursor() function.
 
 2003-09-29	Mike Bourgeous		<nitrogen@slimetech.com>
 
